@@ -147,6 +147,9 @@ class hmcResourceList extends hmController {
         } else {
             $parent = 0;
             $this->setPlaceholder('context_key',$this->context);
+            $context = $this->modx->getContext($this->context);
+            $ctxstart = ($context instanceof modContext) ? $context->getOption('site_start') : 0;
+            
             $contextActionMap = array(
                 array(
                     hmController::LIST_DIVIDER => $this->modx->lexicon('options'),
@@ -160,7 +163,17 @@ class hmcResourceList extends hmController {
                     ),
                     'icon' => 'plus',
                     'permission' => $this->modx->hasPermission('new_document'),
-                )
+                ),
+                array(
+                    'action' => 'resource/preview',
+                    'text' => 'View Website',
+                    'linkparams' => array(
+                        'rid' => $ctxstart,
+                    ),
+                    'icon' => 'arrow-r',
+                    'target' => '_blank',
+                    'permission' => $this->modx->hasPermission('view'),
+                ),
             );
             $this->setPlaceholder('actions',$this->processActions($contextActionMap));
             $this->setPlaceholder('view',$this->hm->getTpl('resource/list.view.context',$this->getPlaceholders()));
