@@ -1,5 +1,9 @@
 This changelog shows an overview of what changed throughout releases, with the latest release or development log on top.
 
+#6680 Add a "View Website" button to the list resource screen (on context level).
+Re-invent checkbox TV support (was built in but not available).
+Prevent breaking the form when values for radio/checkbox/select boxes include html.
+
 ++++++++++++++++++++++++++++++++
 ++   HandyMan 1.0.0-rc2       ++
 ++   Released on 2012-01-06   ++
